Modified note for yesterday, added the database schema for supporting refresh tokens

--- a/defense/server/.env.example
+++ b/defense/server/.env.example
@@ -1,5 +1,6 @@
 FLASK_APP=your_app
 FLASK_ENV=your_env
+JWT_SECRET_KEY=your_jwt_secret_key
 DB_HOST=your_host
 DB_USER=your_user
 DB_PASS=your_password
